@@ -14,8 +14,10 @@ Makefile.in
 /autom4te.cache/
 /cache/
 /compile
+/config.guess
 /config.log
 /config.status
+/config.sub
 /configure
 /depcomp
 /install-sh
